# dexter-bj-rl

./: .gitignore  README.md  pyproject.toml
apps/web/: .env.example  package.json  tsconfig.tsbuildinfo
apps/web/app/: global-error.tsx  globals.css  layout.tsx  loading.tsx  manifest.ts
apps/web/app/api/auth/logout/: route.ts
apps/web/app/api/auth/nonce/: route.ts
apps/web/app/api/auth/session/: route.ts
apps/web/app/api/auth/verify/: route.ts
apps/web/app/api/completion/: types.ts
apps/web/app/api/mcp/proxy/: route.ts
apps/web/app/api/token/: route.ts
apps/web/app/chat/[threadId]/: page.tsx
apps/web/app/sign-up/: page.tsx
apps/web/app/token/: page.tsx
apps/web/lib/: auth.ts  redis.ts
src/dexter_rl/: __main__.py  brain.py  commentary.py  config.py  logging_setup.py  models.py  orchestrator.py  persistence.py  table.py
src/dexter_rl/api/: client.py  events.py  mock.py
tests/: test_brain.py  test_mock.py  test_models.py
